--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 .DS_Store
+Supervised Machine Learning Classification/resources/__pycache__/datasetup.cpython-38.pyc
+Supervised Machine Learning Classification/resources/__pycache__/colorsetup.cpython-38.pyc
